--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "cd resources",
     "build": "tsc && cd resources",
     "cdk-test": "jest",
-    "test": "npm run build && mocha -r source-map-support/register test/e2e.test",
+    "e2e-test": "npm run build && mocha -r source-map-support/register test/e2e.test",
+    "test": "prettier --check **/*.ts && npm run build && cdk synth",
     "cdk": "cdk"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "jest": "^25.5.0",
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
+    "prettier": "^2.0.5",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
