--- a/package.json
+++ b/package.json
@@ -18,18 +18,16 @@
     "@types/node": "10.17.5",
     "@types/node-fetch": "^2.5.7",
     "@types/uuid": "^8.0.0",
-    "aws-cdk": "1.51.0",
+    "aws-cdk": "1.57.0",
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
     "ts-node": "^8.1.0",
-    "typescript": "^3.7.5"
-  },
-  "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.51.0",
-    "@aws-cdk/aws-dynamodb": "^1.51.0",
-    "@aws-cdk/aws-lambda": "^1.51.0",
-    "@aws-cdk/core": "1.51.0",
+    "typescript": "^3.7.5",
+    "@aws-cdk/aws-apigateway": "1.57.0",
+    "@aws-cdk/aws-dynamodb": "1.57.0",
+    "@aws-cdk/aws-lambda": "1.57.0",
+    "@aws-cdk/core": "1.57.0",
     "@types/aws-sdk": "^2.7.0",
     "source-map-support": "^0.5.16"
   }
