--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"],
-    "types": ["mocha"]
+    "types": ["node", "mocha"]
   },
   "exclude": ["cdk.out"]
 }
