--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-cdk/aws-apigateway": "1.57.0",
     "@aws-cdk/aws-cloudfront": "^1.57.0",
     "@aws-cdk/aws-dynamodb": "1.57.0",
+    "@aws-cdk/aws-iam": "^1.57.0",
     "@aws-cdk/aws-lambda": "1.57.0",
     "@aws-cdk/aws-route53": "^1.57.0",
     "@aws-cdk/aws-s3": "^1.57.0",
