--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@aws-cdk/aws-dynamodb": "1.57.0",
     "@aws-cdk/aws-iam": "^1.57.0",
     "@aws-cdk/aws-lambda": "1.57.0",
-    "@aws-cdk/aws-route53": "^1.57.0",
     "@aws-cdk/aws-s3": "^1.57.0",
     "@aws-cdk/aws-s3-deployment": "^1.57.0",
     "@aws-cdk/core": "1.57.0",
@@ -35,5 +34,6 @@
     "source-map-support": "^0.5.16",
     "ts-node": "^8.1.0",
     "typescript": "^3.7.5"
-  }
+  },
+  "dependencies": {}
 }
