--- a/front/package.json
+++ b/front/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "lambda",
+  "name": "front",
   "version": "1.0.0",
   "description": "",
-  "main": "api.js",
+  "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "uuid": "^8.2.0"
+  "devDependencies": {
+    "typescript": "^3.9.7"
   }
 }
