--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -19,7 +19,8 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"],
     "types": [],
-    "jsx": "react"
+    "jsx": "react",
+    "esModuleInterop": true
   },
   "exclude": ["node_modules"]
 }
